2011-01-29  Carsten Haitzler (The Rasterman)

	1.0.0 release

2011-01-29  Carsten Haitzler (The Rasterman)

	* Enabled mempool for object allocation
	* Allow shorter pre-render handler for rect objects if they are
	  invisible

2011-01-30  Tom Hacohen (TAsn)

	* It's actually a merge from my local branch upstream so this
	  includes many changes.
	* Fixed cursor/selection handling with BiDi text.
	* Fixed many BiDi issues in both textblock and text objects.
	* Cleaned up textblock and font engine a lot.
	* Added auto-alignment to tetxblock and text objects.
	* Added mixedwrap (word wrap, and if a word is too big cut it) support
	  to textblock.
	* Renamed a lot of stuff.
	* Made textblock faster, mostly by saving item sizes and caching
	  layout items when text doesn't change.
	* Added harfbuzz (ot layouting/shaping and etc) support.
	* Currently you need to set the env var EVAS_USE_OT to '1' in order to
	  use OT support (harfbuzz) that will change soon.
	* More code cleanups will be coming in the future. This shipment is
	  mostly to get code review started (and also make sure I don't have a
	  merging hell later on).

2011-01-31  ChunEon Park

	* Fix lurking free bug in key grabs.


2011-02-01  Carsten Haitzler (The Rasterman)

	* Added WBMP loader thanks to Samsung.

2011-02-01  Tom Hacohen (TAsn)

	* Started using string objects instead of strings in most of the
	  font engine (everywhere except draw). Haven't removed the
	  paramteres yet, but did mark them as UNUSED. Removing them will be
	  part of a future change.
	* Removed run-time OT toggling support, OT is now fast, no need for that.
	* Renamed all of the intl_props->text_props (because it really
	  changed purpose
	* Fixed spliting/merging of text_props to be fast and good, not
	  hacky and complex like before.
	* Added "mirrored mode" to table object.

2011-02-07 Brett Nash (nash@nash.id.au)

	* Proxy Objects; Now you can set an image to have a 'source' of